GridIndexDaoImpl: Node streaming methods support providing a `lastSeen` timestamp for efficient pagination.
`lastSeen` matches the table index so streaming multiple pages of nodes is O(n) instead of O(n^2)